User & product endpoint finalized
